# megagon

./: .gitignore  CMakeLists.txt  README.md  compile.sh
blender/: default.blend  export.py
src/: file.cpp  file.h  gl_log.h  logger.h  main.cpp  parser.cpp  parser.h
